# five-a-day

./: .dockerignore  .env.testing.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.testing.yml  docker-compose.yml  entrypoint.sh  gcp-cloudrun.yaml  pyproject.toml  readme.md  render.yaml
.claude/skills/update-readme/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml  notify-production.yml
project/: ENROLLMENT_PAYMENT_SYSTEM.md  conftest.py  pytest.ini
project/billing/: README.md  admin.py  constants.py  exports.py  forms.py  models.py  urls.py
project/billing/management/commands/: generate_payments.py
project/billing/migrations/: 0001_initial.py  0002_enrollment_enrollments_academi_615a2d_idx.py
project/billing/services/: enrollment_service.py  payment_service.py  pricing_service.py
project/comms/: README.md  models.py  tasks.py  urls.py
project/comms/management/commands/: send_email.py  test_all_emails.py
project/comms/services/: email_functions.py  email_service.py
project/core/: README.md  admin.py  constants.py  context_processors.py  decorators.py  email.py  exports.py  forms.py  middleware.py  models.py  tasks.py  transactions.py  urls.py  utils.py  views.py
project/core/management/commands/: generate_payments.py  seed_testdata.py  send_email.py  test_all_emails.py
project/core/migrations/: 0001_initial.py  0002_add_site_configuration.py  0002_alter_funfridayattendance_unique_together_and_more.py  0003_populate_site_configuration.py  0003_qa_backlog_and_config.py  0004_populate_enrollment_types.py  0005_add_academic_year_to_enrollment.py  0006_add_todo_item.py  0007_add_color_to_group.py  0008_add_schedule_slot.py  0009_add_fun_friday_attendance.py  0010_add_discount_fields_to_site_config.py  0011_enrollment_payment_system_rework.py  0012_alter_payment_payment_method_historylog.py  0013_alter_historylog_action.py
project/core/static/css/: app.css  styles.css
project/core/static/js/: all-info.js  app-forms.js  base.js  fun-friday.js  home.js  management.js  payments.js  schedule.js  student-create.js  student-detail.js  students.js  support.js
project/core/templates/: 400.html  403.html  404.html  405.html  500.html  all_info.html  apps.html  base.html  database.html  enrollment_types.html  enrollments.html  expense_categories.html  expenses.html  financial_periods.html  fun_friday.html  gestion.html  groups.html  home.html  login.html  management.html  parent_create.html  parents.html  payments.html  payrolls.html  recurring_expense_templates.html  schedule.html  student_create.html  student_detail.html  students.html  teachers.html  test.html  testing_tools.html
project/core/templates/apps/: _email_preview.html  birthday_form.html  enrollment_form.html  fun_friday_form.html  monthly_report_form.html  newsletter_form.html  payment_reminder_form.html  receipts_form.html  tax_certificate_form.html  vacation_closure_form.html  welcome_form.html
project/core/templates/emails/: base_email.html  certificado_renta.html  enrollment_child.html  fun_friday.html  fun_friday_gratuito_zumba.html  happy_birthday.html  matricula_adulto.html  matricula_niño.html  monthly_report.html  newsletter.html  payment_reminder.html  receipt_enrollment.html  recibo_adulto.html  recibo_trimestre_niño.html  recordatorio_cierre_vacaciones.html  recordatorio_pago_mensual_trimestral.html  vacation_closure.html  welcome_student.html
project/core/templates/payments/: payment_create.html  payment_list.html  (+2 more)
project/core/views/: __init__.py  app_forms.py  auth.py  dashboard.py  errors.py  fun_friday_attendance.py  management.py  parents.py  payments.py  schedule.py  students.py  support.py  testing_tools.py  todos.py
project/project/: __init__.py  celery.py  settings.py  settings_test.py  urls.py
project/static/css/: email.css
project/students/: README.md  admin.py  forms.py  models.py  urls.py
project/students/migrations/: 0001_initial.py  0002_alter_studentparent_unique_together_student_gender_and_more.py
project/tests/: test_app_form_views.py  test_auth_views.py  test_constants.py  test_context_processors.py  test_create_payment_views.py  test_email_functions.py  test_email_service.py  test_exports.py  test_forms.py  test_middleware.py  test_models.py  test_parent_views.py  test_payment_views.py  test_schedule_views.py  test_services.py  test_student_forms.py  test_student_views.py  test_transactions.py  test_views.py
scripts/: docker_smoke_test.py  generate_secure_password.py  github_actions_yaml.yaml  reset_seed_dev_data.py  update_readme.py
