[project]
name = "five-a-day"
version = "1.0.4"
description = "Five a Day management software"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Joaquin Hernandez Martinez", email = "proyecto_noether@outlook.com" },
]
dependencies = [
    "django>=5.2.5,<6",
    "pandas>=2.3.1,<3",
    "django-filter>=25.1,<26",
    "djangorestframework>=3.16.1,<4",
    "markdown>=3.8.2,<4",
    "django-cors-headers>=4.7.0,<5",
    "django-storages>=1.14.6,<2",
    "django-redis>=6.0.0,<7",
    "django-environ>=0.12.0,<1",
    "celery>=5.5.3,<6",
    "django-gsheets>=0.0.10,<1",
    "gspread>=6.2.1,<7",
    "httpx>=0.28.1,<1",
    "python-dotenv>=1.2.1,<2",
    "psycopg2-binary>=2.9.9,<3",
    "gunicorn>=21.2.0,<23",
    "whitenoise>=6.11.0,<7",
    "dj-database-url>=3.0.1,<4",
    "openpyxl>=3.1.5,<4",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-cov>=6.1",
    "pytest-xdist>=3.6",
    "pytest-randomly>=3.15",
    "ruff>=0.11",
    "pre-commit>=4.2",
    "mypy>=1.11",
    "django-stubs>=5.0",
    "bandit>=1.8",
    "coverage-badge>=1.1",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project"]

# ============================================================================
# RUFF — Linter & Formatter
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["project"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"project/core/views/__init__.py" = ["F401"]  # re-exports for URL routing
"scripts/*" = ["E741"]  # utility scripts, less strict

[tool.ruff.lint.isort]
known-first-party = ["core", "students", "billing", "comms"]

[tool.ruff.format]
quote-style = "double"

# ============================================================================
# COVERAGE
# ============================================================================

[tool.coverage.run]
source = ["core", "students", "billing", "comms"]
omit = [
    "*/migrations/*",
    "*/management/commands/*",
    "*/admin.py",
    "project/project/settings*.py",
    "project/project/wsgi.py",
    "conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# ============================================================================
# MYPY — Static Type Checker
# ============================================================================

[tool.mypy]
python_version = "3.12"
mypy_path = "project"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
warn_return_any = false
warn_unused_configs = true
exclude = [
    "migrations/",
    "conftest.py",
    "admin\\.py$",
]
strict_optional = false
disable_error_code = ["attr-defined", "misc", "typeddict-item", "var-annotated", "operator"]

[tool.django-stubs]
django_settings_module = "project.settings"

# ============================================================================
# BANDIT — Security Linter
# ============================================================================

[tool.bandit]
exclude_dirs = ["project/tests", "scripts"]
skips = ["B101", "B110", "B105", "B404", "B603", "B607"]  # B101: asserts, B110: try/except/pass, B105: OAuth URLs, B404/B603/B607: subprocess (git commands in testing_tools)
